<resources>
    <string name="app_name">BT_app</string>
    <string name="angle_lab">Angle:</string>
    <string name="power_lab">Power:</string>
    <string name="direction_lab">Direc:</string>
    <string name="none"></string>
    <string name="front_lab">Front</string>
    <string name="front_right_lab">Front-Right</string>
    <string name="right_lab">Right</string>
    <string name="right_bottom_lab">Right-Bottom</string>
    <string name="bottom_lab">Bottom</string>
    <string name="bottom_left_lab">Left-Bottom</string>
    <string name="left_lab">Left</string>
    <string name="left_front_lab">Front-Left</string>
    <string name="center_lab">Center</string>
    <string name="rights_lab">TEST BLUETOOTH APP</string>
    <string name="found">found</string>
    <string name="not_found">not_found</string>
    <string name="doggo">doggo</string>
    <string name="arm">arm</string>
    <string name="back">back</string>
    <string name="goForward">goForward</string>
    <string name="goBackward">goBackward</string>
    <string name="sit">sit</string>
    <string name="jump">jump</string>
    <string name="begin">begin</string>
    <string name="connect">connect</string>
</resources>